Update CI appsettings for temporary Qlikview server

--- a/MillimanAccessPortal/MapTests/appsettings.CI.json
+++ b/MillimanAccessPortal/MapTests/appsettings.CI.json
@@ -1,17 +1,26 @@
 ﻿{
   "Storage": {
     "FileUploadPath": "\\\\indy-qlikview.milliman.com\\testing\\Uploads",
-    "ContentItemRootPath": "\\\\indy-qlikview.milliman.com\\testing\\ContentRoot",
+    "ContentItemRootPath": "\\\\indy-qvprod01.milliman.com\\ContentRoot",
+    //"ContentItemRootPath": "\\\\indy-qlikview.milliman.com\\testing\\ContentRoot",
+    "QvSourceDocumentsPath": "\\\\indy-srv-02.milliman.com\\prm_test\\MillimanSourceDocuments",
+    //"QvSourceDocumentsPath": "\\\\indy-qlikview.milliman.com\\testing\\MillimanSourceDocuments",
     "MapPublishingServerExchangePath": "\\\\indy-qlikview.milliman.com\\testing\\MapPublishingServerExchange",
-    "QvSourceDocumentsPath": "\\\\indy-qlikview.milliman.com\\testing\\MillimanSourceDocuments",
     "FileDropRoot": "\\\\indy-qlikview.milliman.com\\testing\\FileDropRoot",
-    "TemporaryExports": "\\\\indy-qlikview\\testing\\TemporaryExports"
+    "TemporaryExports": "\\\\indy-qlikview.milliman.com\\testing\\TemporaryExports"
   },
-  "QvServerContentUriSubfolder": "MAPTests",
   "ClientReviewRenewalPeriodDays": "90",
   "ClientReviewEarlyWarningDays": "15",
-  "QvServerHost": "indy-qlikview.milliman.com",
-  "QvServerAdminUserAuthenticationDomain": "Indy-Qlikview",
-  "QvServerAdminUserName": "MAP-QV-Admin",
-  "DumpVerboseConfiguration":  false
+
+  //"QvServerContentUriSubfolder": "MAPTests",
+  //"QvServerHost": "indy-qlikview.milliman.com",
+  //"QvServerAdminUserAuthenticationDomain": "Indy-Qlikview",
+  //"QvServerAdminUserName": "MAP-QV-Admin",
+
+  "QvServerContentUriSubfolder": "",
+  "QvServerHost": "indy-qvprod01.milliman.com",
+  "QvServerAdminUserAuthenticationDomain": "indy-qvprod01.milliman.com",
+  "QvServerAdminUserName": "QlikviewAdmin",
+
+  "DumpVerboseConfiguration": false
 }
