Config updates for on-prem Qlikview QDS used in CI

--- a/ContentPublishingServer/ContentPublishingServiceTests/appsettings.CI.json
+++ b/ContentPublishingServer/ContentPublishingServiceTests/appsettings.CI.json
@@ -1,10 +1,11 @@
 {
   "Storage": {
     "FileUploadPath": "\\\\indy-qlikview\\testing\\Uploads",
-    "ContentItemRootPath": "\\\\indy-qlikview\\testing\\ContentRoot",
-    "MapPublishingServerExchangePath": "\\\\indy-qlikview\\testing\\MapPublishingServerExchange",
+    //"ContentItemRootPath": "\\\\indy-qlikview\\testing\\ContentRoot",
     //"QvSourceDocumentsPath": "\\\\indy-qlikview\\testing\\MillimanSourceDocuments",
-    "QvSourceDocumentsPath": "\\\\indy-srv-02\\prm_test\\MillimanSourceDocuments",
+    "ContentItemRootPath": "\\\\indy-qvprod01\\ContentRoot",
+    "QvSourceDocumentsPath": "\\\\indy-qvprod01\\qvshare",
+    "MapPublishingServerExchangePath": "\\\\indy-qlikview\\testing\\MapPublishingServerExchange",
     "FileDropRoot": "\\\\indy-qlikview\\testing\\FileDropRoot",
     "SampleData": "\\\\indy-qlikview\\testing\\Sample Data"
   },
