--- a/MillimanAccessPortal/MillimanAccessPortal/package.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/package.json
@@ -43,20 +43,19 @@
     "@types/yup": "^0.26.7",
     "aspnet-webpack": "^3.0.0",
     "awesome-typescript-loader": "^5.2.1",
-    "clean-webpack-plugin": "^0.1.19",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^1.0.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "html-webpack-plugin": "^3.0.7",
+    "css-loader": "^5.2.7",
+    "html-webpack-plugin": "^4.5.2",
     "jest": "^23.6.0",
     "jest-junit": "^5.2.0",
-    "mini-css-extract-plugin": "^0.4.2",
-    "node-sass": "^4.7.2",
+    "mini-css-extract-plugin": "^1.6.2",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^7.2.0",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.23.1",
-    "svg-sprite-loader": "^4.1.3",
+    "svg-sprite-loader": "^6.0.9",
     "svgo": "^1.0.5",
     "svgo-loader": "^2.1.0",
     "ts-jest": "^23.10.4",
@@ -65,7 +64,8 @@
     "tslint-loader": "^3.5.4",
     "tslint-react": "^3.6.0",
     "typescript": "^3.1.3",
-    "webpack": "^4.20.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.1.1",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-hot-middleware": "^2.21.2",
