--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/UserAgreement.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/UserAgreement.cshtml.template
@@ -38,7 +38,7 @@
 </div>
 
 @section Scripts {
-    <% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
-    <script src="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
+    <% for (var chunk in htmlWebpackPlugin.files.js) { %>
+    <script src="<%= htmlWebpackPlugin.files.js[chunk] %>"></script>
     <% } %>
 }
