--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ContentAccessAdmin/Index.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ContentAccessAdmin/Index.cshtml.template
@@ -17,7 +17,7 @@
 }
 
 @section Scripts {
-    <% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
-    <script src="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
+    <% for (var chunk in htmlWebpackPlugin.files.js) { %>
+    <script src="<%= htmlWebpackPlugin.files.js[chunk] %>"></script>
     <% } %>
 }
