--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/UserMessage.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/UserMessage.cshtml.template
@@ -13,8 +13,8 @@
 }
 
 @section Scripts {
-    <% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
-    <script src="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
+    <% for (var chunk in htmlWebpackPlugin.files.js) { %>
+    <script src="<%= htmlWebpackPlugin.files.js[chunk] %>"></script>
     <% } %>
 }
 
