Updated unit test appsettings

--- a/MillimanAccessPortal/MapTests/appsettings.CI.json
+++ b/MillimanAccessPortal/MapTests/appsettings.CI.json
@@ -1,10 +1,11 @@
 ﻿{
   "Storage": {
+    //"ContentItemRootPath": "\\\\indy-qlikview\\testing\\ContentRoot",
+    //"QvSourceDocumentsPath": "\\\\indy-qlikview\\testing\\MillimanSourceDocuments",
+    "ContentItemRootPath": "\\\\indy-qvprod01\\ContentRoot",
+    "QvSourceDocumentsPath": "\\\\indy-qvprod01\\qvshare",
+
     "FileUploadPath": "\\\\indy-qlikview.milliman.com\\testing\\Uploads",
-    "ContentItemRootPath": "\\\\indy-qvprod01.milliman.com\\ContentRoot",
-    //"ContentItemRootPath": "\\\\indy-qlikview.milliman.com\\testing\\ContentRoot",
-    "QvSourceDocumentsPath": "\\\\indy-srv-02.milliman.com\\prm_test\\MillimanSourceDocuments",
-    //"QvSourceDocumentsPath": "\\\\indy-qlikview.milliman.com\\testing\\MillimanSourceDocuments",
     "MapPublishingServerExchangePath": "\\\\indy-qlikview.milliman.com\\testing\\MapPublishingServerExchange",
     "FileDropRoot": "\\\\indy-qlikview.milliman.com\\testing\\FileDropRoot",
     "TemporaryExports": "\\\\indy-qlikview.milliman.com\\testing\\TemporaryExports"
