--- a/MillimanAccessPortal/MillimanAccessPortal/appsettings.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/appsettings.json
@@ -55,7 +55,8 @@
     "DefaultPasswordResetEmailText": "A password reset request has been received for your Milliman Access Portal account.",
     "ErrorMessageTemplate": "An error occured. Please contact <a href=\"mailto:map.support@milliman.com?subject={0}\">map.support@milliman.com</a> for assistance.",
     "DefaultClientDomainListCountLimit": 3,
-    "NonLimitedDomains": "milliman.com;"
+    "NonLimitedDomains": "milliman.com;",
+    "ProhibitedDomains": "hotmail.com;gmail.com;aol.com"
   },
   "SupportEmailAddress": "support.78832.5ad4ee0bf11242a6@helpscout.net",
   "SupportEmailAlias": "map.support@milliman.com",
