Convert prohibited domain list appsetting to an array

--- a/MillimanAccessPortal/MillimanAccessPortal/appsettings.azure-prod.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/appsettings.azure-prod.json
@@ -30,5 +30,12 @@
   "PbiAzureADUsername": "",
   "PbiTenantId": "",
   "TwoFactorEmailTokenLifetimeMinutes": 15,
-  "MapRootUrl": ""
+  "MapRootUrl": "",
+  "Global": {
+    "ProhibitedDomains": [
+      "hotmail.com",
+      "gmail.com",
+      "aol.com"
+    ]
+  }
 }
